5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1875_1709.log
== SUBMITION (2019-07-02 18:08:31) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
aluno = array(eval(input("digite a matriz:")))
s = sum(mat)
media = s/size(mat)
print(media)
-- EXECUTION TIME:
0.99202
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
4.87
---- user output:
5.811111111111111
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
2
---- correct output:
4.9
---- user output:
4.833333333333333
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
3
---- correct output:
2.38
---- user output:
5.2250000000000005
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:09:46) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
aluno = mat[0]
s = sum(mat)
media = s/size(mat[0])
print(round(media,2)
-- ERROR:
File "XXXX", line 8
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:10:17) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
aluno = mat[0]
s = sum(mat[0])
media = s/size(mat[0])
print(round(media,2)
-- EXECUTION TIME:
0.807192
-- ERROR:
  File "/home/codebench/codes/1875/1709/main.py", line 8
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:10:20) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
aluno = mat[0]
s = sum(mat[0])
media = s/size(mat[0])
print(round(media,2)
-- EXECUTION TIME:
0.656256
-- ERROR:
  File "/home/codebench/codes/1875/1709/main.py", line 8
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:12:00) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
aluno = mat[0]
s = sum(mat[0])
media = s/size(mat[0])
print(round(media,2)
-- ERROR:
File "XXXX", line 8
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:12:02) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
aluno = mat[0]
s = sum(mat[0])
media = s/size(mat[0])
print(round(media,2)
-- EXECUTION TIME:
0.565124
-- ERROR:
  File "/home/codebench/codes/1875/1709/main.py", line 8
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:12:07) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
aluno = mat[0]
s = sum(mat[0])
media = s/size(mat[0])
print(round(media,2)
-- ERROR:
File "XXXX", line 8
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:13:33) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
l = mat.shape[0]
s = sum(mat)
media = s/size(l)
print(round(media,2)
-- ERROR:
File "XXXX", line 8
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:13:36) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
l = mat.shape[0]
s = sum(mat)
media = s/size(l)
print(round(media,2)
-- ERROR:
File "XXXX", line 8
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:13:36) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
l = mat.shape[0]
s = sum(mat)
media = s/size(l)
print(round(media,2)
-- EXECUTION TIME:
0.54546
-- ERROR:
  File "/home/codebench/codes/1875/1709/main.py", line 8
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:19:23) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
l = mat.shape[0]
s = sum(mat)
media = s/size
print(round(media,2))
	

-- EXECUTION TIME:
1.12904
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1709/main.py", line 6, in <module>
    media = s/size
TypeError: unsupported operand type(s) for /: 'float' and 'function'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:19:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
l = mat.shape[0]
s = sum(mat)
media = s/size
print(round(media,2))
	

-- EXECUTION TIME:
1.42429
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1709/main.py", line 6, in <module>
    media = s/size
TypeError: unsupported operand type(s) for /: 'float' and 'function'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:19:25) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
l = mat.shape[0]
s = sum(mat)
media = s/size
print(round(media,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:19:27) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
l = mat.shape[0]
s = sum(mat)
media = s/size
print(round(media,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:19:31) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
l = mat.shape[0]
s = sum(mat)
media = s/size
print(round(media,2))
	

-- EXECUTION TIME:
1.05059
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1709/main.py", line 6, in <module>
    media = s/size
TypeError: unsupported operand type(s) for /: 'float' and 'function'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:19:32) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
l = mat.shape[0]
s = sum(mat)
media = s/size
print(round(media,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:21:50) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
l = array(eval(input("digite a matriz :")))
s = sum(l)
media = s/size
print(round(media,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:21:52) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
l = array(eval(input("digite a matriz :")))
s = sum(l)
media = s/size
print(round(media,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:21:55) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
l = array(eval(input("digite a matriz :")))
s = sum(l)
media = s/size
print(round(media,2))
	

-- EXECUTION TIME:
0.911375
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1709/main.py", line 6, in <module>
    media = s/size
TypeError: unsupported operand type(s) for /: 'int' and 'function'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:22:36) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
l = array(eval(input("digite a matriz :")))
s = sum(l)
media = s/size(l)
print(round(media,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:22:38) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
l = array(eval(input("digite a matriz :")))
s = sum(l)
media = s/size(l)
print(round(media,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:22:41) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
l = array(eval(input("digite a matriz :")))
s = sum(l)
media = s/size(l)
print(round(media,2))
	

-- EXECUTION TIME:
1.31721
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
4.87
---- user output:
2.0
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
2
---- correct output:
4.9
---- user output:
digite a matriz :digite a matriz :2.0
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
3
---- correct output:
2.38
---- user output:
digite a matriz :digite a matriz :3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:23:18) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
l = array(eval(input("digite a matriz :")))
s = sum(l)
media = s(mat)/size(l)
print(round(media,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:23:51) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
l = array(eval(input("digite a matriz :")))
s = sum(mat)
media = s/size(l)
print(round(media,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:25:13) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
l = array(eval(input("digite a matriz :")))
s = sum(mat)
media = s/size(l)
print(round(media,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:25:47) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
l = array(eval(input("digite a matriz :")))
s = sum(mat)
media = s/size(mat)
print(round(media,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:29:51) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
l = array(eval(input("digite a matriz :")))
s = sum(mat)
media = s/size(mat)
print(round(media,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:29:54) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
l = array(eval(input("digite a matriz :")))
s = sum(mat)
media = s/size(mat)
print(round(media,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:29:55) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
l = array(eval(input("digite a matriz :")))
s = sum(mat)
media = s/size(mat)
print(round(media,2))
	

-- EXECUTION TIME:
1.05235
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
4.87
---- user output:
5.81
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
2
---- correct output:
4.9
---- user output:
4.83
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
3
---- correct output:
2.38
---- user output:
digite a matriz :digite a matriz :5.22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:32:18) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
l = array(eval(input("digite a matriz :")))
s = sum(l)
media = s/size(l)
print(round(media,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:33:47) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
l = array(eval(input("digite a matriz :")))
s = sum(mat)
media = s/size(mat)
print(round(media,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:42:05) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
c = mat.shape[1]
s = sum(mat[n,:])
med = s/c
print(round(med,2))
-- EXECUTION TIME:
0.900165
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1709/main.py", line 5, in <module>
    s = sum(mat[n,:])
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:42:06) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
c = mat.shape[1]
s = sum(mat[n,:])
med = s/c
print(round(med,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:43:21) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz :")))
n = int(input("digite: "))
c = mat.shape[1]
s = sum(mat[n,:])
med = s/c
print(round(med,2))
-- EXECUTION TIME:
1.27065
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
4.87
---- user output:
4.87
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
2
---- correct output:
4.9
---- user output:
4.9
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
3
---- correct output:
2.38
---- user output:
2.38
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
